CSS/ask/index.css
.section--askAbout__heading {
	color: var(--primary-color);
}
.section--askAbout__list {
	font-size: 1.15em;
	font-style: italic;
}
.section--askAbout__listItem:not(:last-child) {
	margin-bottom: 0.25em;
}

/* Testimonials */

.section--testimonials {
	--gap: 2em;
	display: flex;
	justify-content: center;
	gap: var(--gap);
	overflow: auto;
	padding: var(--gap) 0em;
}
.section--testimonials::before, .section--testimonials::after {
	content: "";
	align-self: stretch;
	min-width: 1px;
}
.testimonial {
	flex-shrink: 0;
	display: flex;
	flex-direction: column;
	align-items: center;
	gap: 0.5em;
	border-radius: var(--border-radius);
	width: 20em;
	height: 12em;
	padding: 1em;
}
.testimonial::before {
	opacity: 0.05;
}
.testimonial__quoteIcon {
	font-size: 2em;
	color: var(--primary-color);
}
.testimonial__quoteText {
	flex-grow: 1;
	display: grid;
	place-items: center;
	overflow: auto;
	font-family: var(--serif-font-family);
	font-style: italic;
}
.testimonial__authorContainer {
	align-self: flex-end;
	display: flex;
	flex-direction: column;
	font-size: 0.75em;
	text-align: right;
}
.testimonial__authorName {
	opacity: 0.7;
	font-weight: bold;
}
.testimonial__authorPosition {
	opacity: 0.5;
	font-size: 0.9em;
}

